@@ -1,3 +1,6 @@
+2006-11-30	Richard van den Berg  <richard@vdberg.org>
+	* Set meaningful exitcodes when --check is used (Pablo Virolainen)
+
 2006-11-29	Richard van den Berg  <richard@vdberg.org>
 	* Changed version to post-0.13-rc2
 	* Check for WHIRLPOOL so old mhash can be used (Pablo Virolainen)
